--- a/app/src/main/res/layout/page_two.xml
+++ b/app/src/main/res/layout/page_two.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:background="@color/colorPrimaryDark">
 
@@ -20,4 +21,14 @@
         android:background="@color/colorPrimaryDark"
         />
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        app:layout_anchor="@id/scheduled_view"
+        app:layout_anchorGravity="bottom|right|end"
+        android:layout_margin="20dp"
+        android:src="@drawable/ic_action_create" />
+
+</android.support.design.widget.CoordinatorLayout>
