--- a/app/src/main/res/layout/page_one.xml
+++ b/app/src/main/res/layout/page_one.xml
@@ -7,7 +7,7 @@
               android:background="@color/colorPrimaryDark">
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/stateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/page1"
