bugfixes and cosmetic improvements

--- a/app/src/main/res/layout/eco_switch_layout.xml
+++ b/app/src/main/res/layout/eco_switch_layout.xml
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+            android:padding="5dp"
             android:background="@color/colorPrimary">
 
             <TextView
@@ -52,6 +53,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:padding="5dp"
         android:background="@color/colorPrimary">
 
         <TextView
