--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:id="@+id/easterEgg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_name"
+            android:src="@drawable/ic_action_more"
             android:layout_gravity="center_vertical"
             android:layout_weight="0"/>
     </LinearLayout>
