--- a/app/src/main/res/layout/prog_switch_layout.xml
+++ b/app/src/main/res/layout/prog_switch_layout.xml
@@ -24,6 +24,7 @@ cardview:cardUseCompatPadding="true">
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:padding="5dp"
         android:background="@color/colorPrimary">
 
         <TextView
@@ -51,6 +52,7 @@ cardview:cardUseCompatPadding="true">
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:padding="5dp"
         android:background="@color/colorPrimary">
 
         <TextView
