--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorSeparator">#d7ccc8</color>
+    <color name="button_off">#455a64</color>
+    <color name="button_on">#ffc107</color>
+
 </resources>
